[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaulls"
version = "0.3.0"
description = "Add x402 payments to your MCP server in one line"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Aaron Clifft", email = "aaron@northmetrotech.com.au" },
]
keywords = ["mcp", "x402", "payments", "usdc", "base", "agents", "ai", "monetisation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "x402[evm]>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/North-Metro-Tech/vaulls"
Repository = "https://github.com/North-Metro-Tech/vaulls"
Issues = "https://github.com/North-Metro-Tech/vaulls/issues"
Changelog = "https://github.com/North-Metro-Tech/vaulls/blob/main/CHANGELOG.md"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.115.0",
    "x402[fastapi,evm]>=2.4.0",
]
mcp = [
    "mcp>=1.0.0",
]
redis = [
    "redis>=4.0.0",
]
cdp = [
    "PyJWT[crypto]>=2.8.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "x402[fastapi,evm]>=2.4.0",
    "fakeredis>=2.0.0",
    "eth-account>=0.11.0",
    "PyJWT[crypto]>=2.8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vaulls"]

[tool.hatch.build.targets.sdist]
exclude = ["tests", "examples", "VAULLS_IMPLEMENTATION_PLAN.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
